--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
       <div class="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
-            <div class="modal-body" style="white-space: pre-line;"></div>
+            <div class="modal-body"></div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary ok" data-dismiss="modal">Ok</button>
               <button type="button" class="btn btn-default cancel" data-dismiss="modal">Cancel</button>
