fix(index.html): use relative path for static resources.

--- a/public/index.html
+++ b/public/index.html
@@ -8,35 +8,35 @@
     <meta name="author" content=""/>
 
     <!-- Bootstrap -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
-    <!--link href="/css/bootstrap-theme.min.css" rel="stylesheet"/!-->
+    <link href="./css/bootstrap.min.css" rel="stylesheet"/>
+    <!--link href="./css/bootstrap-theme.min.css" rel="stylesheet"/!-->
 
     <!-- Bootswatch themes (good) -->
-    <!--link href="/css/united.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/cerulean.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/journal.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/lumen.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/paper.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/simplex.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/spacelab.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/yeti.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/united.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/cerulean.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/journal.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/lumen.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/paper.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/simplex.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/spacelab.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/yeti.bootstrap.min.css" rel="stylesheet"/-->
 
     <!-- Bootswatch themes (bad) -->
-    <!--link href="/css/readable.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/sandstone.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/slate.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/cosmo.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/cyborg.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/darkly.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/flatly.bootstrap.min.css" rel="stylesheet"/-->
-    <!--link href="/css/superhero.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/readable.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/sandstone.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/slate.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/cosmo.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/cyborg.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/darkly.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/flatly.bootstrap.min.css" rel="stylesheet"/-->
+    <!--link href="./css/superhero.bootstrap.min.css" rel="stylesheet"/-->
 
-    <link href="/css/codemirror/codemirror.css" rel="stylesheet"/>
-    <link href="/css/codemirror/fullscreen.css" rel="stylesheet"/>
-    <link href="/css/fullcalendar.min.css" rel="stylesheet"/>
-    <link href="/css/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
-    <link href="/css/veda.css" rel="stylesheet"/>
-    <link href="/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="./css/codemirror/codemirror.css" rel="stylesheet"/>
+    <link href="./css/codemirror/fullscreen.css" rel="stylesheet"/>
+    <link href="./css/fullcalendar.min.css" rel="stylesheet"/>
+    <link href="./css/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
+    <link href="./css/veda.css" rel="stylesheet"/>
+    <link href="./css/font-awesome.min.css" rel="stylesheet"/>
 
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="cache-control" content="no-cache" />
@@ -384,64 +384,64 @@
     <!-- Javascript -->
 
     <!-- Utils & UI -->
-    <script type="text/javascript" src="/js/browser/lib/promise.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/jquery.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/jsplumb.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/vis.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/bootstrap-contextmenu.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/n3-browser.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/FileSaver.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/autosize.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/moment-with-locales.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/bootstrap-datetimepicker.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/fullcalendar.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/locale/ru.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/jquery.touchSwipe.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/jszip.min.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/marked.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/promise.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/jquery.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/jsplumb.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/vis.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/bootstrap-contextmenu.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/n3-browser.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/FileSaver.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/autosize.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/moment-with-locales.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/fullcalendar.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/locale/ru.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/jquery.touchSwipe.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/jszip.min.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/marked.min.js"></script>
 
     <!-- CodeMirror -->
-    <script type="text/javascript" src="/js/browser/lib/codemirror/codemirror.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/mode/xml/xml.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/mode/javascript/javascript.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/mode/css/css.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/mode/turtle/turtle.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/mode/htmlmixed/htmlmixed.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/addon/edit/closebrackets.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/addon/edit/closetag.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/addon/edit/matchbrackets.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/addon/edit/matchtags.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/addon/fold/xml-fold.js"></script>
-    <script type="text/javascript" src="/js/browser/lib/codemirror/addon/display/fullscreen.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/codemirror.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/mode/xml/xml.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/mode/javascript/javascript.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/mode/css/css.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/mode/turtle/turtle.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/addon/edit/closebrackets.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/addon/edit/closetag.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/addon/edit/matchbrackets.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/addon/edit/matchtags.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/addon/fold/xml-fold.js"></script>
+    <script type="text/javascript" src="./js/browser/lib/codemirror/addon/display/fullscreen.js"></script>
 
     <!-- Veda browser & server -->
-    <script type="text/javascript" src="/js/common/lib/riot.js"></script>
-    <script type="text/javascript" src="/js/common/lib/sha256.js"></script>
-    <script type="text/javascript" src="/js/common/veda_spa.js"></script>
-    <script type="text/javascript" src="/js/common/util.js"></script>
-    <script type="text/javascript" src="/js/common/app_model.js"></script>
-    <script type="text/javascript" src="/js/common/individual_model.js"></script>
-    <script type="text/javascript" src="/js/common/individual_list_model.js"></script>
-    <script type="text/javascript" src="/js/common/user_model.js"></script>
-    <script type="text/javascript" src="/js/common/ontology_model.js"></script>
-    <script type="text/javascript" src="/js/common/drafts_model.js"></script>
-    <script type="text/javascript" src="/js/common/numerator.js"></script>
+    <script type="text/javascript" src="./js/common/lib/riot.js"></script>
+    <script type="text/javascript" src="./js/common/lib/sha256.js"></script>
+    <script type="text/javascript" src="./js/common/veda_spa.js"></script>
+    <script type="text/javascript" src="./js/common/util.js"></script>
+    <script type="text/javascript" src="./js/common/app_model.js"></script>
+    <script type="text/javascript" src="./js/common/individual_model.js"></script>
+    <script type="text/javascript" src="./js/common/individual_list_model.js"></script>
+    <script type="text/javascript" src="./js/common/user_model.js"></script>
+    <script type="text/javascript" src="./js/common/ontology_model.js"></script>
+    <script type="text/javascript" src="./js/common/drafts_model.js"></script>
+    <script type="text/javascript" src="./js/common/numerator.js"></script>
 
     <!-- Veda browser only -->
-    <script type="text/javascript" src="/js/browser/notify.js"></script>
-    <script type="text/javascript" src="/js/browser/backend.js"></script>
-    <script type="text/javascript" src="/js/browser/util.js"></script>
-    <script type="text/javascript" src="/js/browser/veda_controls.js"></script>
-    <script type="text/javascript" src="/js/browser/table-sortable.js"></script>
-    <script type="text/javascript" src="/js/browser/pager.js"></script>
-    <script type="text/javascript" src="/js/browser/update_service.js"></script>
-    <script type="text/javascript" src="/js/browser/individual_presenter.js"></script>
-    <script type="text/javascript" src="/js/browser/drafts_presenter.js"></script>
-    <script type="text/javascript" src="/js/browser/veda_workflow_editor.js"></script>
-    <script type="text/javascript" src="/js/browser/app_presenter.js"></script>
-    <script type="text/javascript" src="/js/browser/auth.js"></script>
+    <script type="text/javascript" src="./js/browser/notify.js"></script>
+    <script type="text/javascript" src="./js/browser/backend.js"></script>
+    <script type="text/javascript" src="./js/browser/util.js"></script>
+    <script type="text/javascript" src="./js/browser/veda_controls.js"></script>
+    <script type="text/javascript" src="./js/browser/table-sortable.js"></script>
+    <script type="text/javascript" src="./js/browser/pager.js"></script>
+    <script type="text/javascript" src="./js/browser/update_service.js"></script>
+    <script type="text/javascript" src="./js/browser/individual_presenter.js"></script>
+    <script type="text/javascript" src="./js/browser/drafts_presenter.js"></script>
+    <script type="text/javascript" src="./js/browser/veda_workflow_editor.js"></script>
+    <script type="text/javascript" src="./js/browser/app_presenter.js"></script>
+    <script type="text/javascript" src="./js/browser/auth.js"></script>
 
     <script type="text/javascript">
       $(function(){
