--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="./css/bootstrap.min.css" rel="stylesheet"/>
-    <!--link href="./css/bootstrap-theme.min.css" rel="stylesheet"/!-->
+    <!--link href="./css/bootstrap-theme.min.css" rel="stylesheet"/-->
 
     <!-- Bootswatch themes (good) -->
     <!--link href="./css/united.bootstrap.min.css" rel="stylesheet"/-->
