--- a/public/index.html
+++ b/public/index.html
@@ -388,7 +388,7 @@
     <script type="text/javascript" src="./js/browser/lib/jquery.js"></script>
     <script type="text/javascript" src="./js/browser/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="./js/browser/lib/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./js/browser/lib/jsplumb.js"></script>
+    <script type="text/javascript" src="./modules/docflow/js/browser/lib/jsplumb.js"></script>
     <script type="text/javascript" src="./js/browser/lib/vis.min.js"></script>
     <script type="text/javascript" src="./js/browser/lib/bootstrap-contextmenu.js"></script>
     <script type="text/javascript" src="./js/browser/lib/n3-browser.min.js"></script>
