fix: login form hide / show

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
   <body>
 
     <!-- Login form -->
-    <div class="hidden login-form">
+    <div style="display:none;" class="login-form">
       <form role="form">
         <h3>Войдите / Sign in</h3>
         <fieldset id="enter-login-password">
@@ -54,7 +54,7 @@
           <button type="submit" id="submit-login-password" class="btn btn-lg btn-primary btn-block">Войти / Sign in</button>
           <button type="submit" id="forgot-password" class="btn btn-link btn-block btn-sm">Забыли пароль? / Forgot password?</button>
         </fieldset>
-        <fieldset id="enter-new-password" class="hidden">
+        <fieldset id="enter-new-password" style="display:none;">
           <input class="form-control input-lg" id="new-password" placeholder="Новый пароль / New password" type="password" name="new-password"/>
           <!--input class="form-control input-lg" id="retype-new-password" placeholder="retype new password" type="password" name="retype-new-password"/-->
           <input class="form-control input-lg" id="secret" placeholder="Код из письма / Code from e-mail" type="text" name="secret"/>
@@ -63,23 +63,23 @@
           <button type="submit" id="request-secret" class="btn btn-link btn-block btn-sm">Запросить новый код / Request new code</button>
         </fieldset>
         <br>
-        <div id="login-failed-error" class="hidden alert alert-danger">
+        <div id="login-failed-error" style="display:none;" class="alert alert-danger">
           <p><strong>Ошибка!</strong> Неверное имя пользователя или пароль.</p>
           <p><strong>Error!</strong> Wrong login or password.</p>
         </div>
-        <div id="password-expired-error" class="hidden alert alert-danger">
+        <div id="password-expired-error" style="display:none;" class="alert alert-danger">
           <p><strong>Ошибка!</strong> Истекло время действия пароля.</p>
           <p><strong>Error!</strong> Password expired.</p>
         </div>
-        <div id="invalid-secret-error" class="hidden alert alert-danger">
+        <div id="invalid-secret-error" style="display:none;" class="alert alert-danger">
           <p><strong>Ошибка!</strong> Неверный код. Повторите попытку с новым кодом.</p>
           <p><strong>Error!</strong> Invalid secret code. Try with new secret code.</p>
         </div>
-        <div id="invalid-password-error" class="hidden alert alert-danger">
+        <div id="invalid-password-error" style="display:none;" class="alert alert-danger">
           <p><strong>Ошибка!</strong> Новый пароль не принят. Введите другой пароль.</p>
           <p><strong>Error!</strong> New password was not accepted. Enter another password.</p>
         </div>
-        <div id="secret-request-info" class="hidden alert alert-info">
+        <div id="secret-request-info" style="display:none;" class="alert alert-info">
           <p><strong>Инфо!</strong> Вам выслан новый код для смены пароля.</p>
           <p><strong>Info!</strong> New secret code sent. Try to change password with new secret code.</p>
         </div>
