--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     <link href="./css/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
     <link href="./css/veda.css" rel="stylesheet"/>
     <link href="./css/font-awesome.min.css" rel="stylesheet"/>
+    <link rel="shortcut icon" href="./favicon.png"/>
 
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="cache-control" content="no-cache" />
